# envelope

./: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  README.md  bandit.yaml  docker-compose.yml  requirements.txt
app/: __init__.py  auth_keys.py  config.py  crypto.py  db.py  deps.py  limiter.py  main.py  models.py  paths.py  security_headers.py  session_csrf.py
cli/: README.md  envelope  envelope-run.ps1  envelope-run.sh  envelope_run.py  pyproject.toml
cli/src/envelope_cli/: __init__.py  __main__.py  credentials.py  device_login.py  main.py  run_core.py
docs/: api-key-lifecycle.md  audit-trail.md  database-configuration.md  mcp.md  pulumi-state-http.md  security-gaps.md  terraform-http-remote-state.md  usage.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: dev.ps1  dev.sh  envelope-python.ps1  install-envelope-cli.ps1  install-envelope-cli.sh  start.ps1  start.sh  test.ps1  test.sh
static/: backup-download.js  bundle-edit-secrets.js  bundle-env-links.js  bundle-sealed-secrets.js  cert-wizard.js  delete-name-confirm.js  keys-create-wizard.js  keys-scopes.js  nav-admin-menu.js  stack-env-links.js  stack-key-graph.js  stack-layers-ui.js  style.css
templates/: backup.html  base.html  bundle_edit.html  bundle_env_links.html  bundle_import_error.html  bundle_new.html  bundle_sealed_secrets.html  bundle_subnav.html  bundles_list.html  certificates.html  error.html  help.html  help_api.html  help_backup.html  help_base.html  help_certificates.html  help_index.html  keys.html  (+12 more)
(+165 files in other folders)
